--- a/styles/global.css
+++ b/styles/global.css
@@ -1,42 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap');
 
-/* Colors */
-html {
+/* Global styles for html and body */
+html, body {
+    margin: 0;
+    padding: 0;
+
+    font-family: 'Inconsolata', monospace;
+    font-size: calc(.5em + .5vw + 1vh);
+
     background: #000;
     color: #fff;
 }
 
-/* Font */
-html {
-    font-family: 'Inconsolata', monospace;
-    font-size: calc(.5em + .5vw + 1vh);
-}
-
-/* Centering */
-html {
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-}
-
-/* Paragraph wrap */
-main {
-    width: 50vw;
-}
-
-/* On phones use more of the space. */
-@media screen and (max-width: 400px) {
-  main {
-    width: 95vw;
-  }
-}
-
-ol {
+/* List styling */
+ol, ul {
     list-style-position: inside;
     padding: 0;
 }
 
-ol li {
+li {
     margin-top: .6rem;
 }
 
