--- a/styles/global.css
+++ b/styles/global.css
@@ -12,10 +12,19 @@ html, body {
     color: #fff;
 }
 
+/* All hail border-box! */
+* {
+    box-sizing: border-box;
+}
+
 /* List styling */
 ol, ul {
     list-style-position: inside;
     padding: 0;
+}
+
+ul {
+    list-style-type: none;
 }
 
 li {
