--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,12 +1,12 @@
 .main {
     margin: 0 auto; /* Centering */
-    width: 70vw;    /* Paragraph wrap */
+    width: 600px;    /* Paragraph wrap */
 }
 
 /* On phones use more of the space. */
 @media screen and (max-width: 400px) {
   .main {
-    width: 95vw;
+    width: 95%;
   }
 }
 
